# tdd-users

./: Makefile  main.py  pyproject.toml  ruff.toml
scripts/: local-setup.sh  pre-requirements.sh
src/application/create_user/: create_user_command.py  create_user_command_handler.py
src/application/delete_user/: delete_user_command.py  delete_user_command_handler.py
src/application/find_user/: find_user_query.py  find_user_query_handler.py  find_user_query_response.py
src/application/search_users/: search_users_query_handler.py  search_users_query_response.py
src/delivery/api/v1/users/: users_requests.py  users_router.py
src/domain/: user.py  user_not_found_error.py  user_repository.py
src/infrastructure/: in_memory_user_repository.py
tests/application/create_user/: test_create_user_command_handler.py
tests/application/delete_user/: test_delete_user_command_handler.py
tests/application/find_user/: test_find_user_query_handler.py
tests/application/search_users/: test_search_users_query_handler.py
tests/delivery/api/v1/users/: test_users_router.py
tests/domain/: user_primitives_mother.py
tests/infrastructure/: test_in_memory_user_repository.py
tests/unit/delivery/api/v1/users/: test_users_router.py
