[project]
name = "tdd-example"
version = "0.1.0"
description = "TDD API REST example"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "fastapi[standard]>=0.118.0",
]


[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=7.4.4",
    "pytest-watch>=4.2.0",
    "ruff>=0.2",
    "ty>=0.0.1a6",
]

[tool.uv]
default-groups = ["dev"]
